<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Feedback/Complaint"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10sp"/>

             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/feedbackTitle"
                 android:entries="@array/feedback_titles"
                 android:prompt="@string/choose_title"
                 android:spinnerMode="dialog"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="5sp"
                android:hint="@string/feedback"
                android:gravity="start"
                android:id="@+id/edtFeedback"
                android:maxLines="6"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:id="@+id/btnSubmit"
                android:layout_marginLeft="22sp"
                android:layout_marginRight="22sp"
                android:layout_marginBottom="22sp"
                android:layout_marginTop="30sp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp" />


        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
