<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/LayoutNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/LayoutConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="5dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/ButtonReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_reset"
                android:textColor="@color/white"
                android:background="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Go To Login"
                android:id="@+id/LinkLogin"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="right|end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>